karl package Changelog
======================

Unreleased
----------

- LP #510240: Formish edit screens have wrong heading

- LP #506106: "accept invitation" refused with password length error
  no matter what password length provided.

- LP #510187: Get the display for per-office data in People reports to
  match the previous layout.

- LP #497437: Fixed all-day event option for calendar events.

- LP #503442: Fixed hardcoded year left in calendar week view template.

- LP #509597: IndexError on Calendar _find_contiguous_slot_across_days

- LP #503451: Fixed multi-day calendar event not on both days.

- LP #503771: Fixed day links on calendar list view.

- LP #503523: AttributeError: 'CalendarEvent' object has no attribute 'color'

- LP #503450: Fixed that the hour and minute selectors on the add calendar
  event page would lose their all-day state if the user entered an end date
  that was before the start date.

- LP #496331: Calendar list view now shows a paginated listing of upcoming
  events with 20 events per page.

- Merged svn+ssh://osi@osi.agendaless.com/home/osi/bfgsvn/karl/branches/formish
  branch, which replaces some form-based views with formish forms.

- LP #496381: Calendar event duration must be at least one minute.

- Added missing registration for IFileInfo adapter for ICommunityRootFolder.

- Fixed bug in evolve2 step that updated 'Last Activity' for every community.

- Added missing view registrations for mailin monitor utility.

- Fixed bug with attachments on mailin caused by a bogus assertion which would
  usually fail.

- Bug fix: Make sure acl's are properly set on profiles during import.

- LP #494582 Added opensearch support to people directory.  (Ported from OSI.)

- Bug fix: Make sure custom_folder_view uses get_layout_provider utility
  method.

- Explicit registration of an IFolderAddables is no longer required.  A
  suitable default is found if there is no registration.  Added
  'get_folder_addables' utility method.
